--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <link rel="icon" href="./assets/favicon.ico" />
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./scripts/script.js" type="module"></script>
-    <title>Expanding Cards</title>
+    <title>Sound Board</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <audio id="applause" src="./sounds/applause.mp3"></audio>
+    <audio id="boo" src="./sounds/boo.mp3"></audio>
+    <audio id="gasp" src="./sounds/gasp.mp3"></audio>
+    <audio id="tada" src="./sounds/tada.mp3"></audio>
+    <audio id="victory" src="./sounds/victory.mp3"></audio>
+    <audio id="wrong" src="./sounds/wrong.mp3"></audio>
+
+    <div id="buttons"></div>
   </body>
 </html>
